# oombak

./: Cargo.toml  README.md  TODO.md
.github/workflows/: CI.yml  Release.yml  release.yml  rust.yml
dut_gen/: CMakeLists.txt  Cargo.toml  dut.cpp  dut.hpp  dut.sv  dut_bind.cpp  dut_bind.h  getters.cpp  sample.sv  setters.cpp  signals.cpp
dut_gen/sample/: dut_bind.cpp  getters.cpp
dut_gen/src/: error.rs  generator.rs  lib.rs  parser.rs
dut_gen/src/templates/: dut.cpp.templated  dut.hpp.templated  dut_bind.h.fixed  getters.cpp.templated  setters.cpp.templated  signals.cpp.templated
ombak/: Cargo.toml
ombak-tui/: Cargo.toml
ombak-tui/src/: component.rs  error.rs  event.rs  lib.rs  main.rs  render.rs  tui.rs
ombak-tui/src/backend/: interpreter.rs  mod.rs  simulator.rs
ombak-tui/src/components/: button.rs  command_line.rs  mod.rs  models.rs  root.rs  signals_viewer.rs  toolbar.rs  (+1 more)
ombak/src/: dut.rs  error.rs  main.rs
oombak_gen/: Cargo.toml
oombak_gen/res/test/sv_project_oombak_gen_output/: dut.cpp
oombak_gen/sample/: signals.cpp
oombak_gen/src/: error.rs  generator.rs  lib.rs
oombak_gen/src/templates/: CMakeLists.txt.templated  dut.hpp.templated  dut_bind.cpp.fixed  dut_bind.h.fixed  ombak_dut.sv.templated
oombak_local_sim/: Cargo.toml
oombak_local_sim/src/: error.rs  lib.rs  oscillator.rs
oombak_parser/src/: oombak_parser.cpp
oombak_rs/: Cargo.toml  build.rs
oombak_rs/oombak_parser/: CMakeLists.txt
oombak_rs/oombak_parser/include/: oombak_parser.h
oombak_rs/oombak_parser/src/: instance_tree_builder.hpp  oombak_parser.cpp
oombak_rs/oombak_parser/tests/: parse_test.cpp  parse_test.h  utils.cpp  utils.hpp
oombak_rs/oombak_parser/tests/fixtures/inout_port/: sample.sv
oombak_rs/oombak_parser/tests/fixtures/packed_array/: sample.sv
oombak_rs/oombak_parser/tests/fixtures/sv_sample_1/: sample.sv
oombak_rs/oombak_parser/tests/fixtures/syntax_error/: sample.sv
oombak_rs/src/: dut.rs  error.rs  lib.rs  main.rs  parser.rs  probe.rs
oombak_rs/src/dut/: dut_sys.rs
oombak_rs/src/parser/: oombak_parser_sys.rs
oombak_rs/src/probe/: parser.rs
oombak_rs/src/probe/parser/: oombak_parser_sys.rs
oombak_sim/: Cargo.toml
oombak_sim/src/: error.rs  lib.rs  local_simulator.rs  message.rs  request.rs  response.rs  sim.rs  simulator.rs
oombak_sim/src/message/: request.rs  response.rs
oombak_sim/src/message/response/: results.rs
oombak_sim/src/response/: results.rs
oombak_tui/: Cargo.toml
oombak_tui/src/: component.rs  error.rs  event.rs  lib.rs  main.rs  render.rs  thread.rs  tui.rs
oombak_tui/src/backend/: interpreter.rs  mod.rs  simulator.rs
oombak_tui/src/components/: command_interpreter.rs  command_line.rs  confirmer.rs  file_explorer.rs  instance_hier_viewer.rs  key_maps_viewer.rs  mod.rs  models.rs  periodic_signal_setter.rs  root.rs  selector.rs  signal_display_properties_setter.rs  signal_properties_editor.rs  signal_value_setter.rs  signals_viewer.rs  wave_viewer.rs
oombak_tui/src/styles/: mod.rs
oombak_tui/src/threads/: error.rs  event.rs  mod.rs  render.rs  simulator_request_dispatcher.rs  thread_group.rs  util.rs
oombak_tui/src/threads/simulator_request_dispatcher/: listener.rs
oombak_tui/src/utils/: bitvec_str.rs  layout.rs  mod.rs
oombak_tui/src/widgets/: command_keys_help_bar.rs  command_keys_help_window.rs  command_line.rs  confirmation_box.rs  confirmation_buttons.rs  dropdown.rs  form.rs  key_maps.rs  mod.rs  scroll_state.rs  terminal.rs  time_bar.rs  waveform.rs
tui/: Cargo.toml
tui/src/: dut.rs  error.rs  lib.rs  main.rs
(+7 files in other folders)
