[package]
name = "oombak_rs"
version = "0.1.0"
edition = "2021"
description = "Provides two essential structs: `Dut`, which represents a simulation instance of a SystemVerilog design that you can interact with, and `Probe`, which allows you to traverse your design hierarchy and specify active \"probe points\" (signals you would like to inspect)."
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
libloading = "0.8.5"
thiserror = "2.0.6"

[build-dependencies]
cmake = "0.1.54"
rerun_except = "1.0.0"
