[package]
name = "oombak_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
oombak_rs = { version="0.1.0", path="../oombak_rs" }
oombak_gen = { version="0.1.0", path="../oombak_gen" }
thiserror = "2.0.11"
rand = "0.9.1"
tokio = { version="1.45.1", features=["full"] }
async-trait = "0.1.88"
