[package]
name = "oombak_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
thiserror = "2.0.11"
oombak_sim = { version="0.1.0", path="../oombak_sim" }
oombak_local_sim = { version="0.1.0", path="../oombak_local_sim" }
tokio = { version="1.45.1", features=["full"] }
async-trait = "0.1.88"
file_type = { version="0.8.8" }
