[package]
name = "oombak_tui"
version = "0.1.0"
edition = "2021"
description.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
thiserror = "2.0.11"
oombak_sim = { version="0.1.0", path="../oombak_sim" }
oombak_local_sim = { version="0.1.0", path="../oombak_local_sim" }
tokio = { version="1.45.1", features=["sync", "rt", "macros"] }
file_type = { version="0.8.8" }
